complete overhaul of project to meet standard

--- a/index.html
+++ b/index.html
@@ -1,70 +1,58 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>M4RV1A</title>
-    <link rel="stylesheet" href="./assets/reset.css" />
-    <link rel="stylesheet" href="./assets/style.css" />
+	<title>PORTFOLIO</title>
+    <link rel="stylesheet" type="text/css" href="./assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="./assets/css/style.css">
 </head>
 <body>
-    <header>
-
-        <nav>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-        </nav>
-        <hr>
-        <h1>MANCHESTER CODING BOOTCAMP PORTFOLIO</h1>
-    </header>
-    <main>
-        <section>
-            <h2>Projects</h2>
-            <div>
-                <div>
-                    <strong>Project 3</strong>
-                </div>
-                <img  src="hashtag">
-            </div>
-            <div>
-                <div>
-                    <strong>Project 4</strong>
-                </div>
-                <img  src="hashtag">
-            </div>
-            <div>
-                <div>
-                    <strong>Project 5</strong>
-                </div>
-                <img  src="hashtag">
-            </div>
-            <div>
-                <div>
-                    <strong>Project 6</strong>
-                </div>
-                <img  src="hashtag">
-            </div>
-            <div>
-                <div>
-                    <strong>Project 7</strong>
-                </div>
-                <img  src="hashtag">
-            </div>
-        </section>
-    </main>
-    <footer>
-        <section>
-            <h3>Reach out!</h3>
-            <ul>
-                <li>@M4RV1A</li>
-                <li>Muyawia_kashif@outlook.com</li>
-                <li>+44 7735 411528</li>
-                <li></li>
-            </ul>
-        </section>
-    </footer>
+	<div class="banner">
+		<nav>
+			<h2>PORTFOLIO</h2>
+			<ul>
+				<li><a href="#">Personal Interests</a></li>
+				<li><a href="#">Projects</a></li>
+				<li><a href="#">Contact Me</a></li>
+			</ul>
+		</nav>
+	<section class="about">
+		<div class="main">
+			<div class="about-text">
+				<h2>My name is MARVIA</h2>
+				<h5>A web developer in training at the University of Manchester</h5>
+				<p>My interest are wide and varied and I will communicate my key interests and aptitude here.</p>
+			</div>
+		</div>
+	</section>
+	<div class="service">
+		<div class="title">
+			<h2>Projects</h2>
+		</div>
+		<div class="container">
+			<div class="card">
+				<h5>Project 3</h5>
+				<div>
+					<a href="#">LINK</a>
+					</p>
+				</div>
+			</div>
+			<div class="card">
+				<h5>Project 4</h5>
+				<div>
+					<a href="#">LINK</a>
+					</p>
+				</div>
+			</div>
+			<div class="card">
+				<h5>Project 5</h5>
+				<div>
+					<a href="#">LINK</a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<footer>
+		<p>Find me on social media: @M4RV1A</p>
+	</footer>
 </body>
 </html>
